syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Blank{}

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message orderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message OrderList{
  repeated orderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (orderResponse);
  rpc ListCategory(Blank) returns (OrderList);
}